--- a/frontend/src/pages/Home.scss
+++ b/frontend/src/pages/Home.scss
@@ -92,6 +92,7 @@
 
 .left-column h1 {
   font-size: 4.3rem;
+  color: #00bfff;
 }
 
 .left-column p,
@@ -126,7 +127,7 @@
   height: 351px;
   border-radius: 50%;
   overflow: hidden;
-  border: 4px solid #fff;
+  border: 8px solid #02b5e8;
   display: flex;
   align-items: center;
   justify-content: center;
