--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -298,6 +298,7 @@
   flex-direction: column;
   align-items: center;
   box-shadow: 0 2px 12px rgba(0, 0, 0, 0.08);
+  justify-content: space-between;
 }
 
 .project-card img {
