--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -394,6 +394,11 @@
 }
 
 
+/* PHP */
+.language-badge.php {
+  color: #8892be;
+  background-color: rgba(136, 146, 190, 0.1);
+}
 
 /* React */
 .language-badge.react {
